--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /Users/timyiu/anaconda3/bin
+home = /Users/timyiu/Desktop/Personal projects/MCIT-Task-Manager/env/bin
 include-system-site-packages = false
 version = 3.8.2
